--- a/stepper_control.html
+++ b/stepper_control.html
@@ -4,7 +4,7 @@
   <br>
   <br>
 Select Stepper Angle <br>
-<form action="/cgi-bin/stepper_control.py" method="POST">
+<form action="/cgi-bin/stepper_control.cgi" method="POST">
   <br>
   0 deg <input type="range" name="slider" min ="0" max="360" value ="180"/> 360 deg <br>
   <br>
